[tool.poetry]
name = "dbproject"
version = "0.1.0"
description = ""
authors = ["Ilia Akatov <ilia-akatoff@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
google-api-python-client = "^2.135.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
